welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: expected class or object definition
def isFacingTrail(c:Color): Boolean = { 
^SlugSnail:36: error: Unmatched closing brace '}' ignored here
}
^